--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -8,5 +8,7 @@
 <h1>Hello from Home</h1>
 <h1><a href="{% url 'portfolio_page' %}">Portfolio</a></h1>
 <h1><a href="{% url 'temp_inherit_home' %}">Temp Inherit</a></h1>
+<h1><a href="{% url 'add_classroom' %}">CRUD</a></h1>
+<h1><a href="{% url 'classbased_home' %}">Classbased</a></h1>
 </body>
 </html>
