--- a/classbased/templates/classbased/base.html
+++ b/classbased/templates/classbased/base.html
@@ -20,16 +20,19 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'temp_inherit_home' %}">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'classbased_classroom' %}">Classroom</a>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'student' %}">Student</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'classbased_student' %}">Student</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'temp_inherit_features' %}">Features</a>
+                    <a class="nav-link" href="#">Features</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'temp_inherit_pricing' %}">Pricing</a>
+                    <a class="nav-link" href="#">Pricing</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
