--- a/classbased/templates/classbased/student.html
+++ b/classbased/templates/classbased/student.html
@@ -1,6 +1,10 @@
 {% extends 'classbased/base.html' %}
 
 {% block content %}
+<a href="{% url 'classbased_add_student' %}" class="btn btn-primary" style=float:right>Add Student</a>
+
+
+    <br>
     <br>
     <table class="table">
         <thead>
@@ -10,11 +14,7 @@
             <th scope="col">Age</th>
             <th scope="col">Email</th>
             <th scope="col">Address</th>
-            <th scope="col">Phone</th>
-            <th scope="col">Roll No</th>
-            <th scope="col">Bio</th>
-            <th scope="col">Classroom</th>
-        </tr>
+            <th scope="col">Action</th>
         </thead>
         <tbody>
         {% for student in students %}
@@ -24,11 +24,12 @@
             <td>{{ student.age }}</td>
             <td>{{ student.email }}</td>
             <td>{{ student.address }}</td>
-            <td>{{ student.studentprofile.phone }}</td>
-            <td>{{ student.studentprofile.roll_no }}</td>
-            <td>{{ student.studentprofile.bio }}</td>
-            <td>{{ student.classroom.name }}</td>
+            <td>
+                <a class="btn btn-primary" href="{% url 'detail_student' student.id %}">Detail</a>
+                <a class="btn btn-success" href="{% url 'update_student' student.id %}">Update</a>
+                <a class="btn btn-danger" href="{% url 'delete_student' student.id %}">Delete</a>
 
+            </td>
         </tr>
         {% endfor %}
         </tbody>
