--- a/forms/templates/forms/add_student.html
+++ b/forms/templates/forms/add_student.html
@@ -61,12 +61,11 @@
             <label for="inputAddress2">Roll Number</label>
             <input type="number" class="form-control" id="inputAddress2" placeholder="roll" name="roll">
         </div>
-<!--        <div class="form-group col-md-6">-->
-<!--            <label for="inputAddress2">Profile Picture</label>-->
-<!--            <input type="file" class="form-control" name="pp">-->
-<!--        </div>-->
+        <div class="form-group col-md-6">
+            <label for="inputAddress2">Profile Picture</label>
+            <input type="file" class="form-control" name="pp">
+        </div>
         <div style="height: 40px"></div>
         <button type="submit" class="btn btn-primary">Submit</button>
-
     </form>
 {% endblock %}
